# imagecompression

./: .gitignore  CMakeLists.txt  out.ppm  perf.data  perf.data.old
.cache/clangd/index/: hilbert.h.6893C35CB765B160.idx  main.cpp.C784329AD86DBB6A.idx  stb_image.h.C1E21CB5BA6AA07F.idx
helloretro/: out.ppm  out1024.ppm  out128.ppm  out131072.ppm  out16.ppm  out16384.ppm  out2.ppm  out2048.ppm  out2097152.ppm  out256.ppm  out262144.ppm  out32.ppm  out32768.ppm  out4.ppm  out4096.ppm  out512.ppm  out524288.ppm  out64.ppm  out65536.ppm  out8.ppm  out8192.ppm
include/: fft.h  fftwrap.hpp  hilbert.h  threadpool.h
src/: fftwrap.cpp  main.cpp
